required added to inputs

--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -32,7 +32,8 @@
                             <input type="text" id="new_campaign_name"
                                    class="checkout_input form-control"
                                    placeholder="Campaign Name" required="required"
-                                   title="Campaign name cannot have digits.">
+                                   title="Campaign name cannot have digits."
+                                   pattern="^[a-zA-Z]{3,}((\s)[a-zA-Z]{3,})+">
                         </div>
                         <div class="col-md-6">
                             <div class="login-text p-b-10" style="color: black;">
