--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -90,7 +90,7 @@
                             </div>
                             <input type="text" id="new_hot_list_start_date"
                                    class="checkout_input form-control date"
-                                   placeholder="dd/mm/yyyy">
+                                   placeholder="dd/mm/yyyy" required="required">
                         </div>
                         <div class="col-md-6">
                             <div class="login-text p-b-10" style="color: black;">
@@ -98,7 +98,7 @@
                             </div>
                             <input type="text" id="new_hot_list_start_time"
                                    class="checkout_input form-control time"
-                                   placeholder="hh:mm">
+                                   placeholder="hh:mm" required="required">
                         </div>
                     </div>
 
@@ -110,7 +110,7 @@
                             </div>
                             <input type="text" id="new_hot_list_end_date"
                                    class="checkout_input form-control date"
-                                   placeholder="dd/mm/yyyy">
+                                   placeholder="dd/mm/yyyy" required="required">
                         </div>
                         <div class="col-md-6">
                             <div class="login-text p-b-10" style="color: black;">
@@ -118,7 +118,7 @@
                             </div>
                             <input type="text" id="new_hot_list_end_time"
                                    class="checkout_input form-control time"
-                                   placeholder="hh:mm">
+                                   placeholder="hh:mm" required="required">
                         </div>
                     </div>
 
