--- a/src/main/resources/templates/campaign-details.html
+++ b/src/main/resources/templates/campaign-details.html
@@ -234,7 +234,8 @@
                                             <input type="text" id="campaign_update_name"
                                                    class="checkout_input form-control" th:field="${campaign.name}"
                                                    th:value="${campaign.getName()}"
-                                                   placeholder="Campaign Name" required="required">
+                                                   placeholder="Campaign Name" required="required"
+                                                   pattern="^[a-zA-Z]{3,}((\s)[a-zA-Z]{3,})+">
                                         </div>
 
                                         <div class="col-md-6">
