--- a/src/main/resources/static/styles/main_styles.css
+++ b/src/main/resources/static/styles/main_styles.css
@@ -309,7 +309,6 @@ section {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-color: #E2D6C8;
 }
 
 .nopadding {
@@ -346,10 +345,22 @@ section {
     height: 100%;
 }
 
-.home_container {
+.home_container_banner_1 {
     width: 100%;
     height: 100%;
     padding-top: 73px;
+}
+
+.home_container_banner_2 {
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+}
+
+.home_container_banner_3 {
+    width: 100%;
+    height: 100%;
+    padding-top: 40px;
 }
 
 .home_content {
