--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -367,6 +367,7 @@
 <script>
 
     $(document).ready(function () {
+        console.log("ready");
         var i;
         var text_inputs = document.querySelectorAll("input[type=text]");
         var number_inputs = document.querySelectorAll("input[type=number]");
@@ -381,6 +382,10 @@
         for (i = 0; i < number_inputs.length; i++) {
             number_inputs[i].setAttribute("max", NUMBER_MAX_LENGTH)
         }
+
+        setTimeout(function () {
+            history.pushState(null, null, ' ');
+        }, 100);
 
     });
 
@@ -449,8 +454,7 @@
         }
     });
 
-    const category_div_id = 'category_dynamicdiv';
-    const subcategory_div_id = 'subcategory_dynamicdiv';
+
 
     $(document).on('change', '#new_campaign_categories', function (event) {
         if ($(this).val() !== "SELECT") {
@@ -461,9 +465,9 @@
                 buildSubcategoriesDropdown(data, "new_campaign_subcategories");
             });
         } else {
-            if (document.getElementById(subcategory_div_id)) {
+            if (document.getElementById('subcategory_dynamicdiv')) {
                 // delete div
-                document.getElementById("dynamic_subcategory").removeChild(document.getElementById(subcategory_div_id));
+                document.getElementById("dynamic_subcategory").removeChild(document.getElementById('subcategory_dynamicdiv'));
                 document.getElementById("subcategory_row").style.display = "none";
             }
         }
@@ -471,14 +475,14 @@
 
     function buildSubcategoriesDropdown(data, subcategoryName) {
         if (data.length > 0) {
-            if (document.getElementById(subcategory_div_id)) {
+            if (document.getElementById('subcategory_dynamicdiv')) {
                 // delete div
-                document.getElementById("dynamic_subcategory").removeChild(document.getElementById(subcategory_div_id));
+                document.getElementById("dynamic_subcategory").removeChild(document.getElementById('subcategory_dynamicdiv'));
                 document.getElementById("subcategory_row").style.display = "none";
             }
 
             var newdiv = document.createElement('div');
-            newdiv.id = subcategory_div_id;
+            newdiv.id = 'subcategory_dynamicdiv';
             var html = '<select id="new_campaign_subcategories" class=\"subcategory\" multiple=\"multiple\">';
             var len = data.length;
             for (var i = 0; i < len; i++) {
@@ -494,8 +498,9 @@
             });  // call
         }
     }
-
-    $('#category_product_type').change(function (event) {
+    $(document).on('change', '#category_product_type', function (event) {
+        console.log("type");
+        console.log($(this).val());
         if ($(this).val() === "BOOK" || $(this).val() === "E_BOOK" || $(this).val() === "AUDIO_BOOK") {
 
             $.getJSON("/admin-panel/campaign/category", {
@@ -505,36 +510,36 @@
                 buildCategoriesDropdown(data, "new_campaign_categories");
             });
         } else {
-            if (document.getElementById(category_div_id) != null) {
+            if (document.getElementById('category_dynamicdiv') != null) {
                 console.log("not null")
                 // delete div
-                document.getElementById("dynamic_category").removeChild(document.getElementById(category_div_id));
+                document.getElementById("dynamic_category").removeChild(document.getElementById('category_dynamicdiv'));
                 document.getElementById("category_row").style.display = "none";
             }
 
-            if (document.getElementById(subcategory_div_id)) {
+            if (document.getElementById('subcategory_dynamicdiv')) {
                 // delete div
-                document.getElementById("dynamic_subcategory").removeChild(document.getElementById(subcategory_div_id));
+                document.getElementById("dynamic_subcategory").removeChild(document.getElementById('subcategory_dynamicdiv'));
                 document.getElementById("subcategory_row").style.display = "none";
             }
         }
     });
 
     function buildCategoriesDropdown(data, categoryName) {
-        if (document.getElementById(category_div_id) != null) {
+        if (document.getElementById('category_dynamicdiv') != null) {
             // delete div
-            document.getElementById("dynamic_category").removeChild(document.getElementById(category_div_id));
+            document.getElementById("dynamic_category").removeChild(document.getElementById('category_dynamicdiv'));
             document.getElementById("category_row").style.display = "none";
 
-            if (document.getElementById(subcategory_div_id)) {
+            if (document.getElementById('subcategory_dynamicdiv')) {
                 // delete div
-                document.getElementById("dynamic_subcategory").removeChild(document.getElementById(subcategory_div_id));
+                document.getElementById("dynamic_subcategory").removeChild(document.getElementById('subcategory_dynamicdiv'));
                 document.getElementById("subcategory_row").style.display = "none";
             }
         }
 
         var newdiv = document.createElement('div');
-        newdiv.id = category_div_id;
+        newdiv.id = 'category_dynamicdiv';
         var html = '<select id=\"new_campaign_categories\" class=\"dropdown_item_select checkout_input\"><option value=\"\">SELECT</option>';
         var len = data.length;
 
