--- a/src/main/resources/templates/coupon-details.html
+++ b/src/main/resources/templates/coupon-details.html
@@ -47,7 +47,7 @@
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
                                 <li><a th:href="@{/admin-panel}">Panel</a></li>
-                                <li style="color: #fbaa1d" th:text="${'Coupon#' + coupon.getCouponId()}"></li>
+                                <li style="color: #fbaa1d" th:text="${'Coupon ' + coupon.getCouponId()}"></li>
                             </ul>
                         </div>
                     </div>
