--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -33,7 +33,7 @@
                                    class="checkout_input form-control"
                                    placeholder="Campaign Name" required="required"
                                    title="Campaign name cannot have digits."
-                                   pattern="^[a-zA-Z]{3,}((\s)[a-zA-Z]{3,})+">
+                                   pattern="[A-Za-z ]+">
                         </div>
                         <div class="col-md-6">
                             <div class="login-text p-b-10" style="color: black;">
